# bencode.py

./: .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.rst  pytest.ini  setup.cfg  setup.py  tox.ini
bencode/: BTL.py  __init__.py  decoder.py  encoder.py  exceptions.py
bencodepy/: __init__.py  common.py  compat.py  decoder.py  encoder.py  exceptions.py
tests/: __init__.py  bencode_tests.py  file_tests.py
tests/bencode/: __init__.py  bencode_tests.py  file_tests.py
tests/bencodepy/: __init__.py  bencode_tests.py  bencodepy_tests.py  file_tests.py
tests/fixtures/: alpha
