[metadata]
name = bencode.py
author = Dean Gardiner
author-email = me@dgardiner.net
summary = Simple bencode parser (for Python 2, Python 3 and PyPy)
description-file = README.rst
home-page = https://github.com/fuzeman/bencode.py
license = BitTorrent Open Source License
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
keywords =
    bittorrent
    bencode
    bdecode

[files]
packages =
    bencode
    bencodepy

[bdist_wheel]
universal = 1

[pbr]
skip_changelog = true
skip_git_sdist = 1
