[metadata]
name = bencode.py
author = Dean Gardiner
author-email = me@dgardiner.net
summary = Simple bencode parser (for Python 2, Python 3 and PyPy)
description-file = README.rst
home-page = https://github.com/fuzeman/bencode.py
project_urls =
    Bug Tracker = https://github.com/fuzeman/bencode.py/issues
    Documentation = https://github.com/fuzeman/bencode.py/blob/master/README.rst
    Source Code = https://github.com/fuzeman/bencode.py
license = MIT License
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
keywords =
    bencode
    bittorrent

[files]
packages =
    bencode
    bencodepy

[bdist_wheel]
universal = 1

[pbr]
skip_changelog = true
